Fix top bar collapse issues on smaller screens

--- a/app/assets/stylesheets/renalware/modules/_patients.scss
+++ b/app/assets/stylesheets/renalware/modules/_patients.scss
@@ -128,6 +128,12 @@ ul.provider {
       }
 
       &.patient-menu-toggler {
+        display: block;
+
+        @media only screen and (min-width: 830px)  {
+          display: inline;
+        }
+
         a,
         a:visited {
           color: $white;
